test/tests/errors/error-record-cannot-override.sm
// true
// false
// false
/**/
/**/

program {
    record person(name: string, age: string);
    record person2(name: string, age: string);
    person = person2;
}